# haskell-hw

./: .gitignore
1.disk-usage/: README.md  disk-usage.cabal
1.disk-usage/app/: Main.hs
bank/: bank.cabal
bank/app/: Main.hs
world/: spotify_songs.csv  world.cabal
world/app/: Main.hs
