cabal-version:       3.8
name:                bank
version:             0.1.0.0
build-type:          Simple
license:             MIT
license-file:        NONE
author:              Alina
maintainer:          ARMinnibaeva@stud.kpfu.ru
category:            Console

library
    exposed-modules:  Bank

executable bank
    main-is:  Main.hs
    build-depends:  base, mtl, stm
    hs-source-dirs:  app
    default-language:  Haskell2010
