cabal-version:       3.8
name:                world
version:             0.1.0.0
build-type:          Simple
license:             MIT
author:              Alina
maintainer:          ARMinnibaeva@stud.kpfu.ru
category:            Console

executable world
  main-is: Main.hs
  build-depends:
    base >= 4.14 && < 5,
    lens >= 4.19,
    parsec,
    bytestring
  hs-source-dirs:
    app
  default-language: Haskell2010